# gd

./: CLAUDE.md  Cargo.toml  README.md  README.zh-TW.md  install.sh
crates/gd-cli/: Cargo.toml
crates/gd-cli/src/: cli.rs  main.rs
crates/gd-cli/src/commands/: boost.rs  clean.rs  doctor.rs  export.rs  hook.rs  init.rs  jump.rs  link.rs  list.rs  mod.rs  setup.rs  update.rs
crates/gd-cli/src/shell/: bash.sh  fish.fish  gd-daemon.service  nu.nu  pwsh.ps1  zsh.sh
crates/gd-cli/src/tui/: app.rs  mod.rs  theme.rs  ui.rs
crates/gd-core/: Cargo.toml
crates/gd-core/src/: db.rs  error.rs  frecency.rs  index.rs  lib.rs  path.rs
crates/gd-daemon/: Cargo.toml
crates/gd-daemon/src/: fan.rs  main.rs  scanner.rs
