[package]
name = "gd-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "gd"

[[bin]]
name = "gd"
path = "src/main.rs"

[dependencies]
gd-core = { path = "../gd-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
nucleo-matcher = "0.3"
serde_json = "1"
dirs = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
